gccida/g3/simplify_unary_operation
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_unary_operation/src/simplify-rtx.c:873:32: error: must use 'enum' tag to refer to type 'rtx_code'
rtx  simplify_unary_operation( rtx_code code, machine_mode mode, rtx op, machine_mode op_mode) 
                               ^
                               enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_unary_operation/src/simplify-rtx.c:873:47: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  simplify_unary_operation( rtx_code code, machine_mode mode, rtx op, machine_mode op_mode) 
                                              ^
                                              enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_unary_operation/src/simplify-rtx.c:873:74: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  simplify_unary_operation( rtx_code code, machine_mode mode, rtx op, machine_mode op_mode) 
                                                                         ^
                                                                         enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_unary_operation/src/simplify-rtx.c:884:4: error: expected ';' after expression
rtx result; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_unary_operation/src/simplify-rtx.c:884:5: error: use of undeclared identifier 'result'
rtx result; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_unary_operation/src/simplify-rtx.c:887:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode pool_mode; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_unary_operation/src/simplify-rtx.c:888:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v20; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_unary_operation/src/simplify-rtx.c:893:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v25; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_unary_operation/src/simplify-rtx.c:894:4: error: expected ';' after expression
rtx v26; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_unary_operation/src/simplify-rtx.c:894:5: error: use of undeclared identifier 'v26'
rtx v26; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_unary_operation/src/simplify-rtx.c:914:23: error: expected identifier or '('
 struct pool_constant = op; 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_unary_operation/src/simplify-rtx.c:925:23: error: expected identifier or '('
 struct pool_constant = get_pool_constant( rtx); 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_unary_operation/src/simplify-rtx.c:931:6: error: use of undeclared identifier 'v26'
|| ( v26 = simplify_subreg( v20, pool_constant, pool_mode, 0), v11 = v38, 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_unary_operation/src/simplify-rtx.c:933:25: error: expected ')'
(  struct pool_constant = v26) != 0LL) ) 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_unary_operation/src/simplify-rtx.c:933:1: note: to match this '('
(  struct pool_constant = v26) != 0LL) ) 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_unary_operation/src/simplify-rtx.c:933:32: error: expected expression
(  struct pool_constant = v26) != 0LL) ) 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_unary_operation/src/simplify-rtx.c:940:23: error: expected identifier or '('
 struct pool_constant = op; 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_unary_operation/src/simplify-rtx.c:958:20: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
rtwint = ( __int64)pool_constant[1]; 
                   ^~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_unary_operation/src/simplify-rtx.c:963:12: error: expected expression
*( _OWORD *)v37.r = *( _OWORD *)&args.operand; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_unary_operation/src/simplify-rtx.c:963:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)v37.r = *( _OWORD *)&args.operand; 
   ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_unary_operation/src/obj/simplify-rtx.o] Error 1
